--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     <div class="section contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:salmakhani@email.com">salmakhani@email.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/salmakhani" target="_blank">linkedin.com/in/yourprofile</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/salmakhani" target="_blank">linkedin.com/in/salmakhani</a></p>
     </div>
 
     <div class="section resume">
