--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
         h2 {
             margin-top: 2rem;
-            color: #7b3f98;
+            color: #444;
         }
         .section {
             background-color: #ffeef5;
@@ -45,13 +45,13 @@
         }
         .project h3 {
             margin-top: 0;
-            color: #6d2077;
+            color: #444;
         }
         .contact, .resume {
             font-size: 1rem;
         }
         a {
-            color: #7b3f98;
+            color: #444;
             text-decoration: none;
         }
         a:hover {
@@ -109,7 +109,7 @@
     <div class="section contact">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:salmakhani@email.com">salmakhani@email.com</a></p>
-        <p>LinkedIn: <a href="https://linkedin.com/in/salmakhani" target="_blank">linkedin.com/in/salmakhani</a></p>
+        <p>LinkedIn: <a href="https://linkedin.com/in/salma-khani" target="_blank">linkedin.com/in/salma-khani</a></p>
     </div>
 
     <div class="section resume">
